# business-proposal

./: .gitignore  README.md  env.sample
architectural_diagrams/C4/: container_diagram.excalidraw
proposal/: README.md  pyproject.toml
proposal/poc/: indexing.ipynb
proposal/poc/bge_chroma_store/: chroma.sqlite3
proposal/src/proposal/chains/: __init__.py  client_search_query.py  document_grading.py  generate_proposal_section.py  section_search_query.py
proposal/src/proposal/core/: embeddings.py  graph_state.py  llm.py  logging_setup.py  schemas.py
proposal/src/proposal/graph/: constants.py  graph.py
proposal/src/proposal/indexing/: parser.py  retriever.py  runner.py
proposal/src/proposal/indexing/sections/: approach.py  base_runnable.py  deliverable.py  executive_section.py  executive_summary.py  pricing_and_timeline.py  problem_statement.py
proposal/src/proposal/nodes/: __init__.py  execute_tool.py  generate_proposal_section.py  grade_document.py  retrieve.py  websearch_client.py  websearch_document.py
proposal/src/proposal/preprocessing/: constants.py  stages.py
proposal/src/proposal/prompts/: data_preprocessing_prompts.py
proposal/src/proposal/ui/: proposal_builder.py
proposal/tests/proposal/chains/: test_client_search_query.py  test_document_grading.py  test_generate_proposal_section.py  test_section_search_query.py
proposal/tests/proposal/indexing/: test_parser.py
